tests/spec/compile-fail/066_overload_return_type_only.zn
// category: compile-fail
// profile: freestanding
// purpose: return type alone is not a valid overload difference

module tests.fail.overloadReturnTypeOnly;

fn parse(text: StringSlice) -> I32 {
    val ignored = text;
    return 1;
}

fn parse(text: StringSlice) -> U32 { // expected-error: overload cannot differ only by return type
    val ignored = text;
    return 1;
}

fn main() {}
